# tunehound

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  publish.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_squashed.py  0002_artwork_and_tags.py  0003_extended_settings.py  0004_release_group_file_count.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: albums.py  artists.py  downloads.py  library.py  retag.py  stats.py  ws.py
backend/app/services/: artwork.py  coverart.py  downloader.py  image_cache.py  library_watcher.py  musicbrainz.py  retagger.py  scan_job.py  scanner.py  tag_reader.py  tagger.py
backend/tests/: conftest.py  test_api_albums.py  test_api_artists.py  test_api_downloads.py  test_api_library.py  test_api_stats.py  test_main_killswitch.py  test_scanner.py  test_utils.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AddArtistModal.tsx  AlbumCard.tsx  AlbumSection.tsx  ArtistSearchDialog.tsx  ArtworkPickerDialog.tsx  DownloadJobCard.tsx  Layout.tsx  RetagDialog.tsx
frontend/src/context/: ImportContext.tsx  WebSocketContext.tsx
frontend/src/hooks/: useTheme.ts  useWebSocket.ts
scripts/: capture_screenshots.py  seed_screenshots.py  start_demo_backend.sh
(+14 files in other folders)
